--- a/style.css
+++ b/style.css
@@ -33,15 +33,26 @@ form label {
   width: 300px;
   height: 300px;
   overflow: hidden;
+  margin: 10px;
+  margin-bottom: 20px;
 }
 
 .gif-image img {
   width: 100%;
 }
 
-.more-gifs {
+.more-container {
   display: flex;
   justify-content: center;
+}
+
+.more-gifs {
+  border: 2px solid #008080;
+  background-color: #ffffff;
+  color: #416843;
+  font-size: 18px;
+  border-radius: 10px;
+  padding: 5px;
 }
 
 .hidden {
